# Hello-Word-J

./: .CLAUDE.md.swp  .gitignore  ARCHITECTURE-DYNAMIC-LITURGICAL-CALENDAR.md  ARCHITECTURE-YEAR-AGNOSTIC-LITURGICAL-ENGINE.md  ARCHITECTURE.md  ARCHITECTURE.mmd  BREVIARIUM_MISSALE_COMPLETION_PLAN.md  BUILD_SYSTEM_LEARNINGS.md  CHECKLIST.md  CLAUDE.md  COMPLETE_SYSTEM_IMPLEMENTATION.md  COMPREHENSIVE_SCHEMA_DOCUMENTATION.md  DATABASE_SUMMARY.md  ELECTRONIC_BREVIARY_MISSAL_SUMMARY.md  FIAT_LUX_TO_FIAT_LEX_ANALYSIS.md  HelloWordJ-7feb2026-12h30-session-ses_3cd1.md  PROJECT_INDEX.json  PROJECT_INDEX.md  RESUME_NOTES_27JUN2025.md  ROADMAP.md  TAURI2_MIGRATION_CHECKLIST.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  workbox-config.js
.serena/: project.yml
Docs/: CHECKLIST-HelloWordByGemini-17jun2025-09h30.md  CHECKLIST-production-release-30JUN2025-v2.md  CHECKLIST-production-release-30JUN2025.md  PRD-InteractiveSPA.html  ROADMAP.md  coverage_results.md
HelloWord/: App.tsx  HelloWord_package.json  babel.config.js  index.html  index.web.js  jest.config.js  metro.config.js  package-json.patch  package-lock.json  package.json  vite.config.ts
data/: neo4j-entities.json  neo4j-relations.json
liturgical-api/: HYBRID_KNOWLEDGE_GRAPH_DOCUMENTATION.md  LITURGICAL_API_DOCUMENTATION.md  README.md  liturgical-engine.js  neo4j_documentation.cypher  package-lock.json  package.json  server.js  setup-database.js  test-api.js
public/: index.html  manifest.json  service-worker.js  sw.js
scripts/: setup_environment.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test-output/: BREAKTHROUGH_COMPARISON_2025-06-28_29.md  CRITICAL_COMPARISON_2025-06-28_29.md  complete-liturgical-content-2025-01-01.html  complete-liturgical-content-2025-03-19.html  complete-liturgical-content-2025-06-28.html  complete-liturgical-content-2025-06-29.html  complete-liturgical-content-2025-12-25.html  liturgical-report-2025-06-28.md  liturgical-report-2025-06-29.md  liturgical-report-2025-07-03.md  liturgical-report-2025-07-05.md  verification-report.json
(+158 files in other folders)
