[package]
name = "sanctissimissa"
version = "1.0.0"
description = "Traditional Catholic Liturgical Application"
authors = ["Robin L. M. Cheung, MBA"]
license = "All Rights Reserved"
repository = ""
default-run = "sanctissimissa"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = [ "window-unminimize", "path-all", "window-start-dragging", "window-show", "window-unmaximize", "fs-exists", "fs-read-dir", "window-maximize", "fs-write-file", "fs-read-file", "window-minimize", "fs-create-dir", "window-close", "window-hide", "shell-open"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "sanctissimissa"
path = "src/main.rs"
