[package]
name = "sanctissimissa"
version = "1.0.0"
description = "Traditional Catholic Liturgical Application"
authors = ["Robin L. M. Cheung, MBA"]
license = "All Rights Reserved"
repository = ""
default-run = "sanctissimissa"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "sanctissimissa"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "sanctissimissa"
path = "src/main.rs"
